public/css/style.css
/* *{
    margin: 0 !important;
} */
 .btn{
    background-color: #DB4444 !important;
    color: white !important;
    border: 0px;
 }
 .btn:hover{
    background-color: #b38a8a !important;
 }
body{
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    margin: 0 !important;
}
.container{
    flex: 1;
}
.product-link{
    text-decoration:none;
}

/* NavBar */
.navbar{
    background-color: white;
}
.navbar-brand{
    font-size: x-large;
    font-weight: bold !important;
}
.navbar-nav{
    gap: 1.5rem;
}
.nav-link{
    color: black !important;
}
.nav-link:hover{
    text-decoration: underline !important;
}
.search-btn{
    background-color: #DB4444 !important;
    color: white !important;
}
.icons{
    font-size: 1.5rem;  
    color : black
}
.user{
    color:#DB4444 ;
}

/* Signup */

/* footer */
footer{
    background-color: black;
    color: white;
    width: 100vw;
}
.footer-link{
    color: white;
    text-decoration: none !important;
    font-weight: 400 !important;
}
.fa-brands{
    font-size: 1.5rem;
}
.copyrights{
    color: rgb(173, 173, 173);
}

/* home.ejs */
.card-text{
    color: #DB4444;
    font-weight: 600;
    font-size: larger;
}
/* details.ejs */

